
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef char wchar_t ;
struct TYPE_2__ {char* pName; char* pDescription; } ;
typedef int PRINTER_INFO_2 ;
typedef TYPE_1__ PRINTER_INFO_1 ;
typedef int * LPBYTE ;
typedef scalar_t__ DWORD ;
typedef int CustomFuzzSize ;


 scalar_t__ EnumPrintersA (int ,char*,int,int *,scalar_t__,scalar_t__*,scalar_t__*) ;
 scalar_t__ EnumPrintersW (int ,char*,int,int *,scalar_t__,scalar_t__*,scalar_t__*) ;
 int Fuzzer (char*,int,int) ;
 int GetLastError () ;
 int GetProcessHeap () ;
 int HEAP_ZERO_MEMORY ;
 scalar_t__ HeapAlloc (int ,int ,scalar_t__) ;
 int HeapFree (int ,int ,unsigned char*) ;
 int OPT_UNICODE ;
 int PRINTER_ENUM_NAME ;
 int RECURSIVE ;
 scalar_t__ dst ;
 int printf (char*,...) ;
 int strcat (char*,char*) ;
 int strcpy (char*,char*) ;

DWORD ShowPrinterInfo(wchar_t *lpName, int level, int opt, char *padding) {

   unsigned char *lpInfo;
   int i,j;
   DWORD n;
   DWORD dwSizeNeeded=0;
   char newpadding[50];

   DWORD ret;

   if (opt & OPT_UNICODE) {
      EnumPrintersW ( PRINTER_ENUM_NAME, (wchar_t* )lpName, level, ((void*)0), 0, &dwSizeNeeded, &n );
   } else {
      EnumPrintersA ( PRINTER_ENUM_NAME, (char *)lpName, level, ((void*)0), 0, &dwSizeNeeded, &n );
   }
   if (dwSizeNeeded==0) {



      return(-1);
   }

   lpInfo = (void *)HeapAlloc ( GetProcessHeap (), HEAP_ZERO_MEMORY, dwSizeNeeded );

   if ( lpInfo != ((void*)0) ) {
         if (opt & OPT_UNICODE) {
            ret=EnumPrintersW ( PRINTER_ENUM_NAME,(wchar_t *)lpName,level,(LPBYTE)lpInfo,dwSizeNeeded,&dwSizeNeeded,&n);
         } else {
            ret=EnumPrintersA ( PRINTER_ENUM_NAME,(char *)lpName,level,(LPBYTE)lpInfo,dwSizeNeeded,&dwSizeNeeded,&n);
         }
      if ( ret== 0 )
    {



         HeapFree ( GetProcessHeap (), 0, lpInfo );
     return 0;
      } else {
         PRINTER_INFO_1 *dataI;
         PRINTER_INFO_2 *dataII;

       for ( i=0; i < n; i++ ) {
               dataI=(PRINTER_INFO_1*)lpInfo;

               printf("%s",padding);
               if (opt & OPT_UNICODE) {
                  if (dataI[i].pName) printf(" %S - ",(dataI[i].pName));
                  if (dataI[i].pDescription) printf(" %S ",(dataI[i].pDescription));

               } else {
                  if (dataI[i].pName) printf(" %s - ",(dataI[i].pName));
                  if (dataI[i].pDescription) printf(" %s ",(dataI[i].pDescription));

               }
                  printf("\n");
              for(j=0;j<sizeof(CustomFuzzSize)/sizeof(int);j++) {
                 if (opt & OPT_UNICODE) {
                    Fuzzer( (wchar_t *) dataI[0].pName, j,opt & OPT_UNICODE);
                    ShowPrinterInfo((wchar_t*)dst,level, OPT_UNICODE, newpadding);
                 } else {
                    Fuzzer( (wchar_t *) dataI[0].pName, j,opt & OPT_UNICODE);
                     ShowPrinterInfo((wchar_t*)dst,level, 0, newpadding);
                 }
               }
               if (opt & RECURSIVE ) {
                  strcpy (newpadding,padding);
                  strcat(newpadding,"---");
                  newpadding[1]='+';
                  ShowPrinterInfo(dataI[i].pName,level, opt, newpadding);
               }
               printf("\n");
         }
         HeapFree ( GetProcessHeap (), 0, lpInfo );
      }
   }

   return(1);
}
